[package]
name = "gateway-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1"
bitcoin = "0.29.2"
bitcoin_hashes = "0.11.0"
fedimint-client = { path = "../../fedimint-client" }
fedimint-core ={ path = "../../fedimint-core" }
fedimint-ln-common ={ path = "../../modules/fedimint-ln-common" }
lightning-invoice = "0.21.0"
thiserror = "1.0.39"
serde = {version = "1.0.149", features = [ "derive" ] }
secp256k1-zkp = { version = "0.7.0", features = [ "serde", "bitcoin_hashes" ] }
url = { version = "2.3.1", features = ["serde"] }
