[package]
name = "resolvr-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.73"
fedimint-core ={ path = "../../fedimint-core" }
fedimint-client = { path = "../../fedimint-client" }
erased-serde = "0.3"
resolvr-common ={ path = "../resolvr-common" }
serde = { version = "1.0.149", features = [ "derive" ] }
